# shownote

./: Cargo.toml
.github/workflows/: release.yml
src/: all-subscriptions.opml  fav-podcasts.opml  main.rs
