[package]
name = "shownotes"
version = "0.1.0"
authors = ["Mikko Viitamäki <mikko.viitamaki+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opml = "*"
rss = "*"
simple_logger = "1.11.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
select = "0.5.0"
