[package]
name = "shownotes"
version = "0.1.0"
authors = ["Mikko Viitamäki <mikko.viitamaki+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opml = "1.1.6"
rss = "2.0.9"
simple_logger = "5.0.0"
reqwest = { version = "0.12.9", features = ["blocking", "json", "rustls-tls"], default-features = false }
select = "0.6.0"
webbrowser = "1.0.2"
ratatui = "0.28.1"
crossterm = "0.28.1"
